👨‍🏫 final changes before showing to Sir Saani

--- a/src/app/components/users/academyadmin/classrooms/classrooms.component.html
+++ b/src/app/components/users/academyadmin/classrooms/classrooms.component.html
@@ -24,6 +24,14 @@
           >
             <span><i class="fa fa-trash"></i> </span>
           </button>
+          <!-- <button
+            (click)="openDialog(classroom)"
+            class="btn btn-sm btn-outline-info  float-right ml-2"
+            popover="Edit"
+            triggers="mouseenter:mouseleave"
+          >
+            <span><i class="fa fa-eye"></i> </span>
+          </button> -->
         </div>
         <div class="card-body">
           <div>
