--- a/src/app/components/users/student/attemptquiz/attemptquiz.component.html
+++ b/src/app/components/users/student/attemptquiz/attemptquiz.component.html
@@ -2,6 +2,15 @@
   <!-- <hr />
     <pre>value: {{ quizForm.value | json }}</pre>
     <hr /> -->
+
+  <!-- <div class="form-row" *ngIf="quiz">
+    <div class="col-md-12">
+      <span class="text-center text-success h2 bold">
+        Time:
+        <lib-countdown [date]="date"></lib-countdown
+      ></span>
+    </div>
+  </div> -->
   <div class="form-row">
     <div class="col-md-12" *ngIf="showMarks">
       <span class="text-center text-success h2 bold">
