--- a/src/app/components/users/student/liveclass/liveclass.component.html
+++ b/src/app/components/users/student/liveclass/liveclass.component.html
@@ -54,12 +54,12 @@
   </div>
 </div>
 
-<input
+<!-- <input
   class="form-control"
   type="text"
   placeholder="Class name to join"
   [(ngModel)]="classRoomToJoin"
-/>
+/> -->
 <div id="agora_local" #myVideo></div>
 <div>
   <ul *ngFor="let remote of remoteCalls">
