--- a/src/app/components/users/teacher/makequiz/makequiz.component.html
+++ b/src/app/components/users/teacher/makequiz/makequiz.component.html
@@ -83,22 +83,16 @@
             </mat-form-field>
           </div>
     </div> -->
-    <div class="col-md-4">
+
+    <!-- <div class="col-md-4">
       <div class="form-group">
         <mat-form-field>
           <mat-label>Total Marks</mat-label>
           <input type="number" min="0" matInput formControlName="totalMarks" />
         </mat-form-field>
       </div>
-      <!-- <label class="font-weight-bold">Total Marks</label>
-      <input
-        type="number"
-        class="form-control"
-        placeholder="Total Marks"
-        formControlName="totalMarks"
-      /> -->
-    </div>
-    
+    </div> -->
+
     <div class="col-md-4">
       <mat-form-field>
         <mat-label>Due Date</mat-label>
@@ -137,7 +131,7 @@
         <div class="card">
           <div class="card-header">
             <label class="font-weight-bold">
-              {{ classroom ? classroom.data.subject.subjectName : "" }}
+              {{ classroom ? classroom.data.subject.subjectName : '' }}
             </label>
           </div>
           <div class="card-body" formArrayName="questions">
