--- a/src/app/components/users/teacher/liveclass/liveclass.component.html
+++ b/src/app/components/users/teacher/liveclass/liveclass.component.html
@@ -59,13 +59,13 @@
 >
   Start Class
 </button>
-<button
+<!-- <button
   [disabled]="!subject"
   class="btn btn-outline-info"
   (click)="shareScreen()"
 >
   Share Screen
-</button>
+</button> -->
 <button [disabled]="!subject" class="btn btn-outline-info" (click)="endClass()">
   End Class
 </button>
