--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -84,7 +84,7 @@
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a> -->
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">42</span></a> -->
         <div class="dropdown-header text-center"><strong>Settings</strong></div>
-        <a class="dropdown-item" [routerLink]="['profile', user.uid]"
+        <a class="dropdown-item" *ngIf="user" [routerLink]="['profile', user.uid]"
           ><i class="fa fa-user"></i> Profile</a
         >
         <!-- <a
